@@ -86,7 +86,7 @@ public class ZipFileDataSourceTest {
     )
       .lines()
       .toList();
-    assertEquals("agency_id,agency_name,agency_url,agency_timezone", lines.get(0));
+    assertEquals("agency_id,agency_name,agency_url,agency_timezone", lines.getFirst());
     assertEquals("Caltrain,Caltrain,http://www.caltrain.com,America/Los_Angeles", lines.get(1));
 
     // Close zip
