@@ -24,7 +24,7 @@ public class InterliningTest extends GtfsTest {
     // the same route and with zero transfers.
     Itinerary itinerary = plan(time, "stop0", "stop3", null, false, false, null, null, null, 2);
 
-    assertEquals(itinerary.legs().get(0).route().getId().getId(), "route1");
+    assertEquals(itinerary.legs().getFirst().route().getId().getId(), "route1");
 
     var secondLeg = itinerary.legs().get(1);
     assertEquals(secondLeg.route().getId().getId(), "route1");
@@ -36,7 +36,7 @@ public class InterliningTest extends GtfsTest {
   public void interlineOnDifferentRoute() {
     var itinerary = plan(time, "stop0", "stop6", null, false, false, null, null, null, 2);
 
-    assertEquals(itinerary.legs().get(0).route().getId().getId(), "route0");
+    assertEquals(itinerary.legs().getFirst().route().getId().getId(), "route0");
 
     var secondLeg = itinerary.legs().get(1);
     assertEquals(secondLeg.route().getId().getId(), "route3");
@@ -48,7 +48,7 @@ public class InterliningTest extends GtfsTest {
   public void staySeatedNotAllowed() {
     var itinerary = plan(time, "stop0", "stop5", null, false, false, null, null, null, 2);
 
-    assertEquals(itinerary.legs().get(0).route().getId().getId(), "route2");
+    assertEquals(itinerary.legs().getFirst().route().getId().getId(), "route2");
 
     var secondLeg = itinerary.legs().get(1);
     assertEquals(secondLeg.route().getId().getId(), "route2");
