@@ -29,6 +29,6 @@ class DefaultVehicleRentalServiceTest {
     List<VehicleRentalStation> vehicleRentalStationForEnvelope =
       defaultVehicleRentalService.getVehicleRentalStationForEnvelope(0, 0, 10, 10);
     assertEquals(1, vehicleRentalStationForEnvelope.size());
-    assertEquals(vehicleRentalStation, vehicleRentalStationForEnvelope.get(0));
+    assertEquals(vehicleRentalStation, vehicleRentalStationForEnvelope.getFirst());
   }
 }
