@@ -5,7 +5,6 @@ import java.nio.file.FileSystems;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
@@ -40,7 +39,7 @@ class FilePatternArgumentsProvider
     var pathsFound = new ArrayList<Path>();
     try {
       Files.walkFileTree(
-        Paths.get(".."),
+        Path.of(".."),
         new SimpleFileVisitor<>() {
           @Override
           public FileVisitResult visitFile(Path path, BasicFileAttributes attrs) {
